syntax="proto3";

message Notification {
  string message = 1;
  repeated string clientIds = 2;
}

message Response {
  int32 statusCode = 1;
  repeated string failedClientIds = 2;
}

service NotificationService {
  rpc Send(Notification) returns (Response) {}
}